Working with java 17 switch pattern matching